# BDSP

./: .gitignore  LICENSE  README.md
.github/workflows/: integrate.yaml
docs/: Doxyfile  index.html
source/: CircularBuffer.cpp  CircularBuffer.h  MidSide.h  VoltPerOct.cpp  VoltPerOct.h  consts.h  decibel.h  decibels.h  mappings.h  maps.h  maps_skews.h  util.h  utility.h  waveshaper.h  wshaper.h
source/cv/: VoltPerOctave.cpp  VoltPerOctave.h
source/envelope/: AR.cpp  AR.h  EnvAR.cpp  EnvAR.h
source/filter/: Biquad.cpp  Biquad.h  HP1_DCBlock.cpp  HP1_DCBlock.h  HP1_RC_TPT.cpp  HP1_RC_TPT.h  HP2_SallenKey_TPT.cpp  HP2_SallenKey_TPT.h  HP4_Ladder_TPT.cpp  HP4_Ladder_TPT.h  LP1_RC_TPT.cpp  LP1_RC_TPT.h  LP2_SallenKey_TPT.cpp  LP2_SallenKey_TPT.h  LP4_Ladder_TPT.cpp  LP4_Ladder_TPT.h  MM1_RC_TPT.cpp  MM1_RC_TPT.h  MM2_Butterworth_TPT.cpp  MM2_Butterworth_TPT.h
source/oscillator/: OscWavetable.cpp  OscWavetable.h
source/smoother/: SmootherLinear.cpp  SmootherLinear.h
tables/wavetables/: SAW_NAIVE4096.h  SQUARE_NAIVE4096.h  TRI_NAIVE4096.h  Wavetables.ipynb  sine4096.h
tables/wavetables/.ipynb_checkpoints/: Wavetables-checkpoint.ipynb
tests/: CMakeLists.txt
tests/source/: test_decibel.cpp  test_decibels.cpp  test_maps.cpp  test_tests.cpp  test_util.cpp  test_utility.cpp
wavetables/: Wavetables.ipynb  sine4096.h
